[gd_scene load_steps=22 format=4 uid="uid://ck00y8tcc0p7q"]

[ext_resource type="Script" path="res://201. BoatNavigation/Scripts/player.gd" id="1_donbu"]
[ext_resource type="Script" path="res://201. BoatNavigation/Scenes/boat_navigation.gd" id="1_pfypy"]
[ext_resource type="Texture2D" uid="uid://cwqyxw64pps3i" path="res://102. Icons/boat_pixelart.png" id="2_wt70f"]
[ext_resource type="Script" path="res://201. BoatNavigation/Scripts/fishing_area.gd" id="3_2ks1s"]
[ext_resource type="Script" path="res://201. BoatNavigation/Scripts/trash_area.gd" id="5_5r4wy"]
[ext_resource type="TileSet" uid="uid://i1xgsiuwiucq" path="res://405. Start Area/Assets/water_tile.tres" id="5_dteif"]
[ext_resource type="Script" path="res://201. BoatNavigation/Scripts/whirl_area.gd" id="6_cfceq"]
[ext_resource type="Texture2D" uid="uid://04xwtieeh0x6" path="res://100. Fishing and Fish/Assets/plastic 3.png" id="7_mv70d"]
[ext_resource type="Texture2D" uid="uid://drk2gi5euw61i" path="res://100. Fishing and Fish/Assets/plastic 2.png" id="7_p2by8"]
[ext_resource type="Texture2D" uid="uid://ckcjnevpod0e4" path="res://201. BoatNavigation/Assets/Pfeil.png" id="8_4ddid"]
[ext_resource type="Texture2D" uid="uid://bnkasmwvii6un" path="res://201. BoatNavigation/Assets/whirle-nobg.png" id="9_0upm4"]
[ext_resource type="Texture2D" uid="uid://5lyto7kdu7ir" path="res://1000. Old or unused/101. Fishing and Fish/Assets/violet fish.png" id="9_h7gu2"]
[ext_resource type="Script" path="res://201. BoatNavigation/Scripts/return_home_area.gd" id="10_my2jo"]
[ext_resource type="Script" path="res://201. BoatNavigation/Scripts/GUI.gd" id="12_ba7g3"]
[ext_resource type="PackedScene" uid="uid://06xv1a273y3p" path="res://603. ResourceGUI/ResourceGUI.tscn" id="13_yku71"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_okyxk"]
size = Vector2(77, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_6vuf8"]
radius = 32.0156

[sub_resource type="CircleShape2D" id="CircleShape2D_k7co1"]
radius = 123.147

[sub_resource type="Gradient" id="Gradient_kcxno"]
offsets = PackedFloat32Array(0, 0.428571, 0.649351, 0.818182)
colors = PackedColorArray(0.14902, 0.305882, 0.509804, 0, 0.00784314, 0.176471, 0.47451, 1, 0.0588235, 0.152941, 0.270588, 0.690196, 0.054902, 0.145098, 0.258824, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_supkc"]
gradient = SubResource("Gradient_kcxno")
fill = 1
fill_from = Vector2(0.5, 0.513761)
fill_to = Vector2(0.8, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_im7hp"]
size = Vector2(89, 78)

[node name="BoatNavigation" type="Node2D"]
position = Vector2(708, 320)
script = ExtResource("1_pfypy")

[node name="Player" type="CharacterBody2D" parent="."]
visibility_layer = 524290
z_index = 1
position = Vector2(-119, 218)
script = ExtResource("1_donbu")

[node name="Boat" type="Sprite2D" parent="Player"]
visibility_layer = 524290
z_index = 1
position = Vector2(-24.807, -36.5309)
scale = Vector2(0.386858, 0.376309)
texture = ExtResource("2_wt70f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-29, -23)
shape = SubResource("RectangleShape2D_okyxk")

[node name="FishingArea" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-415, 144)
script = ExtResource("3_2ks1s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishingArea"]
position = Vector2(1, 37)
shape = SubResource("CircleShape2D_6vuf8")

[node name="VioletFish" type="Sprite2D" parent="FishingArea"]
position = Vector2(0.999997, 37)
scale = Vector2(2.75, 2.75)
texture = ExtResource("9_h7gu2")

[node name="FishingArea3" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-479, -206)
script = ExtResource("3_2ks1s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishingArea3"]
position = Vector2(1, 37)
shape = SubResource("CircleShape2D_6vuf8")

[node name="VioletFish" type="Sprite2D" parent="FishingArea3"]
position = Vector2(-2, 37)
scale = Vector2(2.75, 2.75)
texture = ExtResource("9_h7gu2")

[node name="FishingArea2" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(353, -239)
script = ExtResource("3_2ks1s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishingArea2"]
position = Vector2(1, 37)
shape = SubResource("CircleShape2D_6vuf8")

[node name="VioletFish" type="Sprite2D" parent="FishingArea2"]
position = Vector2(-2, 37)
scale = Vector2(2.75, 2.75)
texture = ExtResource("9_h7gu2")

[node name="TrashArea" type="Area2D" parent="."]
position = Vector2(283, 55)
script = ExtResource("5_5r4wy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashArea"]
light_mask = 2
visibility_layer = 2
position = Vector2(0, 42)
shape = SubResource("CircleShape2D_6vuf8")
debug_color = Color(0, 0.0862745, 0.109804, 0.647059)

[node name="RedBottle" type="Sprite2D" parent="TrashArea"]
position = Vector2(-10, 32)
scale = Vector2(4.20454, 4.20454)
texture = ExtResource("7_p2by8")

[node name="WhiteBottle" type="Sprite2D" parent="TrashArea"]
position = Vector2(5.99997, 48)
rotation = -1.03652
scale = Vector2(3.77273, 3.77273)
texture = ExtResource("7_mv70d")

[node name="TrashArea2" type="Area2D" parent="."]
position = Vector2(-321, -211)
script = ExtResource("5_5r4wy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashArea2"]
light_mask = 2
visibility_layer = 2
position = Vector2(0, 42)
shape = SubResource("CircleShape2D_6vuf8")
debug_color = Color(0, 0.0862745, 0.109804, 0.647059)

[node name="RedBottle" type="Sprite2D" parent="TrashArea2"]
position = Vector2(-10, 32)
scale = Vector2(4.20454, 4.20454)
texture = ExtResource("7_p2by8")

[node name="WhiteBottle" type="Sprite2D" parent="TrashArea2"]
position = Vector2(5.99997, 48)
rotation = -1.03652
scale = Vector2(3.77273, 3.77273)
texture = ExtResource("7_mv70d")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
show_behind_parent = true
tile_map_data = PackedByteArray("AAD1//v/AAAAAAAAAAD1//z/AAAAAAEAAAD1//3/AAAAAAEAAAD1//7/AAAAAAAAAAD1////AAABAAEAAAD1/wAAAAAAAAEAAAD1/wEAAAAAAAAAAAD1/wIAAAAAAAEAAAD1/wMAAAAAAAEAAAD1/wQAAAAAAAEAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD2//3/AAABAAEAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD2/wAAAAAAAAEAAAD2/wEAAAAAAAEAAAD2/wIAAAABAAEAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD3//v/AAAAAAEAAAD3//z/AAAAAAEAAAD3//3/AAAAAAAAAAD3//7/AAAAAAEAAAD3////AAABAAEAAAD3/wAAAAAAAAEAAAD3/wEAAAABAAEAAAD3/wIAAAAAAAEAAAD3/wMAAAABAAEAAAD3/wQAAAABAAEAAAD4//v/AAAAAAAAAAD4//z/AAABAAEAAAD4//3/AAAAAAEAAAD4//7/AAAAAAEAAAD4////AAAAAAEAAAD4/wAAAAABAAEAAAD4/wEAAAAAAAEAAAD4/wIAAAAAAAEAAAD4/wMAAAABAAEAAAD4/wQAAAAAAAEAAAD5//v/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAEAAAD5//7/AAAAAAEAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAAABAAEAAAD5/wIAAAAAAAAAAAD5/wMAAAABAAEAAAD5/wQAAAABAAEAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAABAAEAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAABAAEAAAD6/wIAAAAAAAAAAAD6/wMAAAABAAEAAAD6/wQAAAAAAAEAAAD7//v/AAAAAAAAAAD7//z/AAABAAEAAAD7//3/AAABAAEAAAD7//7/AAAAAAAAAAD7////AAAAAAEAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAEAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAEAAAD7/wQAAAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8//3/AAABAAEAAAD8//7/AAAAAAEAAAD8////AAABAAEAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAEAAAD8/wIAAAABAAEAAAD8/wMAAAABAAEAAAD8/wQAAAAAAAAAAAD9//v/AAABAAEAAAD9//z/AAAAAAAAAAD9//3/AAAAAAEAAAD9//7/AAAAAAEAAAD9////AAAAAAAAAAD9/wAAAAAAAAEAAAD9/wEAAAAAAAEAAAD9/wIAAAABAAEAAAD9/wMAAAAAAAAAAAD9/wQAAAABAAEAAAD+//v/AAABAAEAAAD+//z/AAABAAEAAAD+//3/AAAAAAAAAAD+//7/AAABAAEAAAD+////AAAAAAAAAAD+/wAAAAAAAAEAAAD+/wEAAAABAAEAAAD+/wIAAAAAAAEAAAD+/wMAAAAAAAEAAAD+/wQAAAAAAAAAAAD///v/AAAAAAAAAAD///z/AAABAAEAAAD///3/AAAAAAEAAAD///7/AAAAAAEAAAD/////AAAAAAEAAAD//wAAAAABAAEAAAD//wEAAAAAAAEAAAD//wIAAAAAAAAAAAD//wMAAAAAAAEAAAD//wQAAAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAABAAEAAAAAAP//AAAAAAEAAAAAAAAAAAAAAAEAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAPv/AAAAAAEAAAABAPz/AAAAAAEAAAABAP3/AAAAAAEAAAABAP7/AAAAAAEAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAABAAEAAAABAAIAAAABAAEAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAACAPv/AAABAAEAAAACAPz/AAABAAEAAAACAP3/AAABAAEAAAACAP7/AAAAAAAAAAACAP//AAAAAAEAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAABAAEAAAACAAMAAAAAAAEAAAACAAQAAAAAAAAAAAADAPv/AAAAAAAAAAADAPz/AAABAAEAAAADAP3/AAAAAAAAAAADAP7/AAABAAEAAAADAP//AAAAAAEAAAADAAAAAAABAAEAAAADAAEAAAAAAAEAAAADAAIAAAABAAEAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAABAAEAAAAEAP7/AAAAAAAAAAAEAP//AAABAAEAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAEAAAAEAAMAAAABAAEAAAAEAAQAAAABAAEAAAAFAPv/AAABAAEAAAAFAPz/AAAAAAEAAAAFAP3/AAABAAEAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAEAAAAFAAEAAAABAAEAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAEAAAAFAAQAAAAAAAAAAAAGAPv/AAAAAAEAAAAGAPz/AAABAAEAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAEAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAEAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAAAAAA=")
tile_set = ExtResource("5_dteif")
collision_enabled = false
navigation_enabled = false

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
show_behind_parent = true
light_mask = 2
tile_map_data = PackedByteArray("AAD0//v/AAAAAAEAAAD0//z/AAAAAAEAAAD0//3/AAAAAAEAAAD0//7/AAAAAAEAAAD0////AAAAAAEAAAD0/wAAAAAAAAEAAAD0/wEAAAAAAAEAAAD0/wIAAAAAAAEAAAD0/wMAAAAAAAEAAAD0/wQAAAAAAAEAAAD0/wUAAAAAAAEAAAD1/wUAAAAAAAEAAAD2/wUAAAAAAAEAAAD3/wUAAAAAAAEAAAD4/wUAAAAAAAEAAAD5/wUAAAAAAAEAAAD6/wUAAAAAAAEAAAD7/wUAAAAAAAEAAAD8/wUAAAAAAAEAAAD9/wUAAAAAAAEAAAD+/wUAAAAAAAEAAAD//wUAAAAAAAEAAAAAAAUAAAAAAAEAAAABAAUAAAAAAAEAAAACAAUAAAAAAAEAAAADAAUAAAAAAAEAAAAEAAUAAAAAAAEAAAAFAAUAAAAAAAEAAAAGAAUAAAAAAAEAAAAHAAUAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAMAAAAAAAEAAAAHAAIAAAAAAAEAAAAHAAEAAAAAAAEAAAAHAAAAAAAAAAEAAAAHAP//AAAAAAEAAAAHAP7/AAAAAAEAAAAHAP3/AAAAAAEAAAAHAPz/AAAAAAEAAAAHAPv/AAAAAAEAAAAHAPr/AAAAAAEAAAAGAPr/AAAAAAEAAAAFAPr/AAAAAAEAAAAEAPr/AAAAAAEAAAADAPr/AAAAAAEAAAACAPr/AAAAAAEAAAABAPr/AAAAAAEAAAAAAPr/AAAAAAEAAAD///r/AAAAAAEAAAD+//r/AAAAAAEAAAD9//r/AAAAAAEAAAD8//r/AAAAAAEAAAD7//r/AAAAAAEAAAD6//r/AAAAAAEAAAD5//r/AAAAAAEAAAD4//r/AAAAAAEAAAD3//r/AAAAAAEAAAD2//r/AAAAAAEAAAD1//r/AAAAAAEAAAD0//r/AAAAAAEAAAA=")
tile_set = ExtResource("5_dteif")
navigation_enabled = false

[node name="Storm" type="Area2D" parent="."]
position = Vector2(-136.107, -25.706)
rotation = 1.83259
script = ExtResource("6_cfceq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Storm"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_k7co1")

[node name="Sprite2D" type="Sprite2D" parent="Storm"]
show_behind_parent = true
position = Vector2(-1.2776, 0.231533)
scale = Vector2(3.23842, 3.28737)
texture = SubResource("GradientTexture2D_supkc")

[node name="Sprite2D" type="Sprite2D" parent="Storm/Sprite2D"]
show_behind_parent = true
position = Vector2(0.596535, -0.15745)
scale = Vector2(0.0688602, 0.067017)
texture = ExtResource("9_0upm4")

[node name="ReturnHomeArea" type="Area2D" parent="."]
position = Vector2(-133, 257)
script = ExtResource("10_my2jo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReturnHomeArea"]
position = Vector2(-3, 26)
shape = SubResource("RectangleShape2D_im7hp")

[node name="Pfeil" type="Sprite2D" parent="ReturnHomeArea"]
position = Vector2(-1, 34)
scale = Vector2(2.28125, 2.28125)
texture = ExtResource("8_4ddid")

[node name="GUI" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("12_ba7g3")

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2

[node name="Stats" type="HBoxContainer" parent="GUI/MarginContainer"]
layout_direction = 1
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="GUI/MarginContainer/Stats"]
custom_minimum_size = Vector2(200, 20)
layout_direction = 3
layout_mode = 2

[node name="FishCount" type="Label" parent="GUI/MarginContainer/Stats"]
layout_direction = 3
layout_mode = 2
text = "Fish: 0/20"

[node name="PlasticsCount" type="Label" parent="GUI/MarginContainer/Stats"]
layout_direction = 3
layout_mode = 2
text = "Plastics: 0/20"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ResourceGUI" parent="." instance=ExtResource("13_yku71")]
offset_left = -812.0
offset_top = -199.0
offset_right = -714.0
offset_bottom = -160.0
